# python-agent-input

./: LICENSE  README.md  pyproject.toml  release.sh
.verploy/: deploy  manual  verify
src/python_agent_input/: __init__.py  _agent_input.py
tests/: agent_input_test.py  fetch_temperature.py
